<resources>
    <string name="app_name">EduCo</string>
    <string name="label_login_activity_title">Login to your account</string>
    <string name="label_forgot_activity_title">Forgot your password</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="btn_label_sign_in">Sign In</string>
    <string name="btn_label_sign_up">Sign Up</string>
    <string name="label_no_account">Or No Account?</string>
    <string name="error_message_in_valid_email">Enter a valid Email Address.</string>
    <string name="error_message_short_password">Password must be at least 8 characters long.</string>
    <string name="desc_educo_logo">EduCo Logo</string>
    <string name="label_welcome_screen_title">Welcome to EduCo</string>
    <string name="label_welcome_message">Download Course Materials for\n offline use for free</string>
    <string name="twitter_icon">Twitter</string>
    <string name="facebook_icon_Desc">Facebook</string>
    <string name="google_icon_desc">Google</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="hello_blank_fragment">Blank fragment</string>
    <string name="hello_dummy">Hello,\nJohn Doe</string>
    <string name="offline">Offline Downloads</string>
    <string name="catalog">Catalog</string>
    <string name="sign_up_button">Register on EduCo</string>
    <string name="hint_full_name">Full Name</string>
    <string name="error_message_in_valid_name">Please enter a valid name</string>
    <string name="label_sign_up_screen_title">Sign Up Screen</string>
    <string name="label_or_have_account">Or Already have account?</string>
    <string name="title_activity_details">Details Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="desc_download_button">Download button</string>
    <string name="desc_details_screen_banner">Details Screen Banner</string>
    <string name="desc_back_button">Back Button</string>
    <string name="desc_open_button">Open/Play Button</string>
    <string name="label_size">Size</string>
    <string name="label_duration">Duration</string>
    <string name="label_date_uploaded">Date Uploaded</string>
    <string name="field_req">This field is required</string>
    <string name="label_documents">Documents</string>
    <string name="label_audios">Audios</string>
    <string name="label_videos">Videos</string>
    <string name="desc_empty_list">Empty list</string>
    <string name="label_no_record_found">No Offline Record found</string>
</resources>