<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".views.auth.SignUpActivity">


    <TextView
        android:id="@+id/txt_Sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/sign_up_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/register_vector" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Sign_up"/>

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/input_rounded_background"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="@dimen/dimens_12"
        android:ems="10"
        android:fontFamily="@font/lato_medium"
        android:hint="@string/hint_full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="@dimen/dimens_12"
        android:paddingStart="@dimen/dimens_12"
        android:paddingEnd="@dimen/dimens_12"
        android:paddingBottom="@dimen/dimens_12"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_image" />

    <EditText
        android:id="@+id/edtEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/input_rounded_background"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="@dimen/dimens_12"
        android:ems="10"
        android:fontFamily="@font/lato_medium"
        android:hint="@string/hint_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimens_12"
        android:paddingStart="@dimen/dimens_12"
        android:paddingEnd="@dimen/dimens_12"
        android:paddingBottom="@dimen/dimens_12"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/edtFullName"/>


    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/input_rounded_background"
        android:drawableStart="@drawable/ic_password_key"
        android:drawableEnd="@drawable/ic_password_eye"
        android:drawablePadding="@dimen/dimens_12"
        android:ems="10"
        android:fontFamily="@font/lato_medium"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="@dimen/dimens_12"
        android:paddingStart="@dimen/dimens_12"
        android:paddingEnd="@dimen/dimens_12"
        android:paddingBottom="@dimen/dimens_12"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/edtEmailAddress"/>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="300dp"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="false"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_outlined_rounded_background"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"/>


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>