<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:scrollbars="none"
        tools:context=".views.auth.ForgotPasswordActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24"
            android:fontFamily="@font/lato_black"
            android:text="@string/label_forgot_activity_title"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <EditText
            android:id="@+id/edtForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="?actionBarSize"
            android:layout_marginTop="@dimen/dimen_48"
            android:layout_marginEnd="?actionBarSize"
            android:background="@drawable/input_rounded_background"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="@dimen/dimens_12"
            android:ems="10"
            android:fontFamily="@font/lato_medium"
            android:hint="@string/hint_email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimens_12"
            android:paddingStart="@dimen/dimens_12"
            android:paddingEnd="@dimen/dimens_12"
            android:paddingBottom="@dimen/dimens_12"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimens_45"
            android:background="@drawable/btn_rounded_background"
            android:text="@string/btn_label_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dimen_48"
            app:layout_constraintEnd_toEndOf="@+id/edtForgotEmail"
            app:layout_constraintStart_toStartOf="@+id/edtForgotEmail"
            app:layout_constraintTop_toBottomOf="@+id/edtForgotEmail" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.23" />

        <ImageButton
            android:id="@+id/backBtn"
            style="@style/Widget.MaterialComponents.MaterialCalendar.HeaderToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_16"
            android:layout_marginTop="@dimen/dimens_16"
            android:padding="8dp"
            android:tint="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>