<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.android.educo.views.details.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:contentDescription="@string/desc_details_screen_banner"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/top_banner" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ibBack"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc_back_button"
                    android:onClick="back"
                    android:tint="@color/colorBlack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimens_8"
                    android:ellipsize="end"
                    android:fontFamily="@font/lato_medium"
                    android:text="@{model.material.title}"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ibBack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ibBack"
                    app:layout_constraintTop_toTopOf="@+id/ibBack" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:background="@drawable/btn_circular_background"
                    android:contentDescription="@string/desc_open_button"
                    android:tint="@color/colorBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_play" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_16"
            android:layout_marginEnd="@dimen/dimens_16"
            android:layout_marginBottom="@dimen/dimens_80"
            app:cardBackgroundColor="@color/colorPrimaryTransparent"
            app:cardCornerRadius="@dimen/dimens_8"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/dimens_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_32"
                    android:orientation="horizontal"
                    android:weightSum="2.0">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center_vertical"
                        android:text="@string/label_size"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:gravity="center_vertical"
                        android:text="@{model.material.size}"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_32"
                    android:orientation="horizontal"
                    android:weightSum="2.0">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center_vertical"
                        android:text="@string/label_duration"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:gravity="center_vertical"
                        android:text="@{model.material.duration}"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_32"
                    android:orientation="horizontal"
                    android:weightSum="2.0">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_bold"
                        android:gravity="center_vertical"
                        android:text="@string/label_date_uploaded"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_medium"
                        android:gravity="center_vertical"
                        android:text="12th October, 2020"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimens_16"
            android:layout_marginTop="@dimen/dimens_24"
            android:layout_marginEnd="@dimen/dimens_16"
            android:layout_marginBottom="@dimen/dimens_24"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_medium"
                android:text="@{model.material.description}"
                android:textColor="@color/textColorPrimary" />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>